--- a/Css/style.css
+++ b/Css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat+Alternates:wght@300&family=Montserrat:wght@500&family=Nunito:wght@200;300;400&family=Open+Sans:ital,wght@0,300;0,800;1,300;1,400&display=swap');
 
 
-/*Colors roots that we're going to use in theh project*/
+/*Colors roots that we're going to use in the project*/
 :root {
     --white:#fff ;
     --black: #1c2b2d ;
@@ -53,5 +53,114 @@
      margin: 0 auto ;
      background-color:#eee ;
      padding: 1rem 5rem 5rem 5rem;
-
+     border: 3px solid var(--color-primary);
+     border-radius: 5px;
+ 
  }
+
+ .quiz-box h1 {
+     background-color: var(--color-primary);
+     font-size: 4rem;
+     text-align: center;
+     color: var(--white) ;
+     padding: 1rem 0;
+     margin-bottom: 2rem ;
+     border-radius: 3px;
+ }
+
+ .quiz-header {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+ }
+
+ .quiz-header #progress {
+     color: var(--color-dark-grey) ;
+     font-size:1.6rem ;
+     font-weight: 70;
+ }
+
+ .quiz-header #count-down {
+     font-size: 1.6rem;
+     font-weight:700;
+     background-color: var(--color-primary) ;
+     padding: 5px ;
+     margin: 1px;
+     color:var(--white) ;
+     border-radius: 3px;
+ }
+
+ .quiz-box #question {
+     font-size: 1.8rem;
+     font-weight: 600;
+     color:var(--color-primary);
+     border: 1px solid #777;
+     border-width: 1px 0;
+     padding: 5px 0;
+ }
+
+ .buttons {
+     margin: 1.5rem 0  4rem 0;
+ }
+
+ .btn {
+     text-align:left ;
+     display: flex;
+     background-color: #ddd;
+     width:100%;
+     font-size: 1.8rem;
+     color: var(--black) ;
+     border: 1px solid var(--color-primary) ;
+     border-radius: 5px ;
+     margin:7px 0 ;
+     padding: 1rem ;
+     outline: none;
+ }
+ /*Pseudo Classes*/
+
+ .btn:hover {
+     cursor: pointer ;
+     background-color: var(--color-primary);
+     color: var(--white);
+ }
+
+ .btn:hover {
+    cursor: pointer ;
+    background-color: var(--color-primary);
+    color: var(--white);
+}
+
+.btn:active {
+    cursor: pointer ;
+    background-color: var(--color-sec);
+}
+
+/*Adding properties to id's and others*/
+
+#score {
+    color: var(--black);
+    text-align: center;
+    font-size: 2rem;
+    font-size: 2rem;
+    margin-bottom: 4rem;
+}
+
+.quiz-repeat{
+    text-align: center;
+    margin: 0 auto;
+}
+
+.quiz-repeat a {
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: #fff;
+    text-decoration:none ;
+    background-color: var(--color-primary);
+    padding:1rem ;
+    border-radius: 5px ;
+    transition: all .3s;
+}
+
+.quiz-repeat a:hover{
+    background-color: var(--color-primary);
+}
